[update]使用后台运行命令